# consensus-rs-playground

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md
.github/workflows/: ci.yml
.zed/: settings.json
benches/: binary_search.rs  set_associative_cache.rs
consensus/: Cargo.toml
consensus/.github/workflows/: ci.yml
consensus/src/: main.rs  ring_buffer.rs
proptest-regressions/vsr/: journal.txt  superblock.txt
scratch/: binary_search.rs  binary_search_learning_plan.md  journal.rs  message_buffer.rs  segmented_array.rs  set_associative_cache.rs  set_associative_cache_learning_plan.md
src/: constants.rs  ewah.rs  iops.rs  lib.rs  message_buffer.rs  message_pool.rs  message_pool_tests.rs  test_utils.rs
src/io/: backend_linux.rs  backend_macos.rs  intrusive_iops.rs  io_core.rs  iops.rs  mod.rs
src/lsm/: binary_search.rs  mod.rs  node_pool.rs  segmented_array.rs  set_associative_cache.rs
src/stdx/: bitset.rs  bounded_array.rs  fastrange.rs  list.rs  mod.rs  queue.rs  released_set.rs  ring_buffer.rs
src/storage/: buffer.rs  constants.rs  engine.rs  iocb.rs  layout.rs  mod.rs  storage.rs
src/util/: mod.rs  utils.rs  zero.rs
src/vsr/: checksum.rs  chunk_tracking.rs  client_operation.rs  command.rs  framing.rs  free_set.rs  header.rs  header_prepare.rs  iops.rs  journal.rs  journal_primitives.rs  journal_tests.rs  members.rs  message.rs  mod.rs  operation.rs  pool.rs  replica.rs  state.rs  storage.rs  superblock.rs  superblock_quorum.rs  view_change.rs
src/vsr/journal/: tests.rs
src/vsr/wire/: checksum.rs  (+8 more)
tests/: free_set.rs  free_set_fuzz.rs
