[package]
name = "consensus"
version = "0.1.0"
edition = "2024"

[dependencies]
aegis = { version = "0.9", features = ["pure-rust"] }

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7"

[target.'cfg(target_os = "macos")'.dependencies]
crossbeam-queue = "0.3"

[dev-dependencies]
proptest = "1"
tempfile = "3"
