[package]
name = "consensus"
version = "0.1.0"
edition = "2024"

[features]
default = []
production = []

[dependencies]
aegis = "0.9"

[target.'cfg(not(target_os = "linux"))'.dependencies]
aegis = { version = "0.9", features = ["pure-rust"] }

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7"
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
crossbeam-queue = "0.3"
libc = "0.2"

[dev-dependencies]
criterion = "0.8"
libc = "0.2"
proptest = "1"
tempfile = "3"

[[bench]]
name = "binary_search"
harness = false

[[bench]]
name = "set_associative_cache"
harness = false
